--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -21,18 +21,37 @@
         <Button Grid.Column="1" Content="Settings" HorizontalAlignment="Right" HorizontalContentAlignment="Stretch" Margin="0,10,10,10" Padding="10,1,10,1" TabIndex="2" Click="SettingsButton_Click"/>
         <Border BorderBrush="Black" BorderThickness="1" Grid.Column="1" Grid.Row="1" Margin="10,10,10,10">
             <Grid x:Name="MessageWindowLayout" ShowGridLines="True" Initialized="MessageWindowLayout_Initialized">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="6*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="40"/>
                 </Grid.RowDefinitions>
-                <TextBlock x:Name="ChatWindow" TextWrapping="Wrap" Text="{}{User: Some message}" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Padding="5,3,5,3" LineHeight="1" IsHitTestVisible="False"/>
-                <TextBox x:Name="MessageTextBox" Grid.Row="1" TextWrapping="Wrap" VerticalContentAlignment="Center" VerticalScrollBarVisibility="Auto" BorderThickness="0,0,0,0" HorizontalScrollBarVisibility="Disabled" MaxLines="1" MaxLength="256" Padding="5,0,5,0" GotFocus="MessageTextBox_GotFocus" LostFocus="MessageTextBox_LostFocus" BorderBrush="{x:Null}" TextChanged="MessageTextBox_TextChanged" KeyDown="MessageTextBox_KeyDown"/>
-                <Label x:Name="PlaceholderText" Content="Write your message..." Grid.Row="1" VerticalContentAlignment="Center" Padding="5,0,5,0" HorizontalContentAlignment="Stretch" IsHitTestVisible="False" Opacity="0.5"  Panel.ZIndex="1"/>
-                <Button x:Name="SendMessageButton" Grid.Column="1" Content="Send" Margin="5,5,5,5" Grid.Row="1" Click="SendMessage" IsEnabled="False"/>
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="5*"/>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBox x:Name="MessageTextBox" TextWrapping="Wrap" VerticalContentAlignment="Center" VerticalScrollBarVisibility="Auto" BorderThickness="0,0,0,0" HorizontalScrollBarVisibility="Disabled" MaxLines="1" MaxLength="256" Padding="5,0,5,0" GotFocus="MessageTextBox_GotFocus" LostFocus="MessageTextBox_LostFocus" BorderBrush="{x:Null}" TextChanged="MessageTextBox_TextChanged" KeyDown="MessageTextBox_KeyDown"/>
+                    <Label x:Name="PlaceholderText" Content="Write your message..." VerticalContentAlignment="Center" Padding="5,0,5,0" HorizontalContentAlignment="Stretch" IsHitTestVisible="False" Opacity="0.5"  Panel.ZIndex="1"/>
+                    <Button Grid.Column="2" x:Name="SendMessageButton" Content="Send" Margin="5,5,5,5" Click="SendMessage" IsEnabled="False"/>
+                    <GridSplitter Width="3" />
+                </Grid>
+                <ListView x:Name="Messages" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True" AlternationCount="2">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="{x:Type ListViewItem}">
+                            <Setter Property="Focusable" Value="false"/>
+                            <Style.Triggers>
+                                <Trigger Property="ListView.AlternationIndex" Value="0">
+                                    <Setter Property="Background" Value="White"/>
+                                    <Setter Property="Foreground" Value="Black"/>
+                                </Trigger>
+                                <Trigger Property="ListView.AlternationIndex" Value="1">
+                                    <Setter Property="Background" Value="WhiteSmoke"/>
+                                    <Setter Property="Foreground" Value="Black"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                </ListView>
             </Grid>
         </Border>
         <Label x:Name="AppSettingInfo" Grid.Column="1" Content="{}{AppSettings:Info}" HorizontalAlignment="Left" Margin="120,0,0,0" VerticalAlignment="Center" HorizontalContentAlignment="Stretch"/>
