--- a/ConnectionDialog.xaml
+++ b/ConnectionDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LANchat"
         mc:Ignorable="d"
-        Title="Add connection" Height="200" Width="350" ResizeMode="NoResize">
+        Title="Add connection" Height="200" Width="350" ResizeMode="NoResize" Icon="/program.png">
     <Grid x:Name="ConnectionGridLayout">
         <Grid.RowDefinitions>
             <RowDefinition/>
