Fixed request packet and disconnect problems, added comments for classes and functions

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../icons/program.png</normaloff>../icons/program.png</iconset>
+  </property>
   <property name="locale">
    <locale language="English" country="UnitedStates"/>
   </property>
