--- a/src/connectiondialog.ui
+++ b/src/connectiondialog.ui
@@ -31,6 +31,10 @@
   <property name="windowTitle">
    <string>Add Connection</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../icons/program.png</normaloff>../icons/program.png</iconset>
+  </property>
   <layout class="QGridLayout" name="DialogLayout" rowstretch="0,0,0" columnstretch="1,3">
    <property name="leftMargin">
     <number>5</number>
